--- a/baston_setup.yml
+++ b/baston_setup.yml
@@ -20,6 +20,7 @@
     - name: create security grp for bastion host
       ec2_group:
         name: bastion-host-sg
+        key: mykeyy.ppk
         description: Allow port 22 from everywhere and all port within sg
         region: "{{region}}"
         vpc_id: "{{vpc_id}}"
